welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:16: error: not found: value x
    setPos(x+i,0)
           ^